--- a/c/makefile
+++ b/c/makefile
@@ -1,17 +1,10 @@
 CC = g++
 CFLAGS = --std=gnu++11 -Ofast
-SRCS = main.cpp cascade_utils.cpp image_utils.cpp
+SRCS = cascade_utils.cpp image_utils.cpp
 HDRS = cascade.hpp cascade_utils.hpp image_utils.hpp
-PROG = main
+SHROBJ = cascade.so
 
-OPENCV = `pkg-config opencv --cflags --libs`
-LIBS = $(OPENCV)
-
-all: $(PROG)
-	./$(PROG)
-
-$(PROG):$(SRCS)
-	$(CC) $(CFLAGS) -o $(PROG) $(SRCS) $(LIBS)
-
+$(SHROBJ):$(SRCS)
+	$(CC) -shared -o $(SHROBJ) -fPIC $(SRCS) $(HDRS) $(CFLAGS) -o $(SHROBJ)
 clean:
-	rm -rf main *.o *.gch
+	rm -rf main *.o *.gch *.so
