SV implementation tested on HW

--- a/cascade_classifier/rtl/Makefile
+++ b/cascade_classifier/rtl/Makefile
@@ -6,6 +6,15 @@ sim: default
 run: sim
 	gtkwave top.vcd top.sav &
 
+ip:default
+	python create_ip.py
+	vivado -mode batch -source ip_pack.tcl
+	rm -rf *.log *.jou .Xil/
+
+ip_synth:ip
+	vivado -mode batch -source run_synth.tcl
+	rm -rf *.log *.jou .Xil/
+
 clean:
 	rm -rf top/params.sv img.hpp top/rom/*
 	rm -rf obj_dir
