Pygears impl working on HW (AGAIN....)

--- a/cascade_classifier/pygears_impl/scripts/Makefile
+++ b/cascade_classifier/pygears_impl/scripts/Makefile
@@ -3,5 +3,8 @@ ip:
 	vivado -mode batch -source ip_pack.tcl
 	rm -rf *.log *.jou .Xil/
 
+run_sim:
+	gearbox run_sim.py
+
 clean:
 	rm -rf *.log *.jou .Xil/
